--- a/vision/resources/sass/styles.scss
+++ b/vision/resources/sass/styles.scss
@@ -1,10 +1,10 @@
 $colors: (
-        brand-1: #58dcff,
+        brand-1: #9ebf16,
         brand-2: #9b4ed4,
-        brand-3: #9ebf16,
+        brand-3: #58dcff,
         brand-4: #ff8000,
         brand-5: #d23333,
-        brand-6: #212121,
+        brand-6: #333333,
         brand-7: #ffffff,
 );
 
@@ -20,12 +20,6 @@ $font: 'Montserrat', sans-serif;
 
 @function shade($color, $percentage) {
   @return mix(black, $color, $percentage);
-}
-
-@keyframes fade {
-  0% { opacity: 1; }
-  50% { opacity: 0.5; }
-  100% { opacity: 1 }
 }
 
 * {
@@ -51,7 +45,7 @@ body {
 .header {
   margin: 0;
   font-size: 60px;
-  color: getBrandColor(brand-1);
+  color: getBrandColor(brand-6);
   font-weight: 200;
   position: relative;
   letter-spacing: -0.06em;
@@ -60,13 +54,28 @@ body {
 .sub-message {
   color: tint(getBrandColor(brand-6), 50%);
   font-weight: 300;
+  margin: 0;
+
+  &--center {
+    text-align: center;
+  }
+}
+
+.color {
+  @each $name, $color in $colors {
+    $i: index($colors, $color);
+
+    &--#{$name} {
+      color: $color
+    }
+  }
 }
 
 .box {
   width: 1000px;
   height: 1000px;
   transform: rotate(36deg);
-  background: rgba(getBrandColor(brand-1), 0.5);
+  background: rgba(getBrandColor(brand-3), 1);
   position: absolute;
   top: -850px;
   left: -710px;
@@ -76,6 +85,6 @@ body {
     transform: rotate(50deg);
     top: -850px;
     left: -670px;
-    animation: fade 5s infinite 0.5s;
+    background: rgba(getBrandColor(brand-6), 1);
   }
 }
