--- a/vision/themes/base/welcome.njk
+++ b/vision/themes/base/welcome.njk
@@ -1,5 +1,6 @@
 {% extends "master.njk" %}
 
 {% block page %}
-    <h1 class="header">{{ page.name }}</h1>
+    <h1 class="header">vision<span class="color--brand-3">elixir</span></h1>
+    <h2 class="sub-message sub-message--center">{{ app.name }}</h2>
 {% endblock %}
